Fix Mobile Nav Button Wrap

--- a/css/style.css
+++ b/css/style.css
@@ -391,8 +391,9 @@ img {
     right: 0;
     width: 100%;
     height: 100%;
-    padding: 0 0px;
+    padding: 0 10px;
     background-color: var(--color-gray-white);
+    overflow-y: scroll;
     z-index: -1;
     opacity: 0;
     visibility: hidden;
@@ -410,7 +411,6 @@ img {
     min-height: 100%;
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
     align-items: center;
     justify-content: center;
   }
@@ -432,7 +432,7 @@ img {
   }
 
   .navbar-mobile .nav-menu li {
-    margin: 24px;
+    margin: 24px 5px;
   }
 
   .navbar-mobile .nav-menu a {
@@ -440,6 +440,7 @@ img {
   }
 
   .navbar-mobile .nav-menu .nav-links {
+    width: 100%;
     padding: 15px;
     font-size: 30px;
     font-weight: bold;
